# mdreview

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sample.md
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
openspec/changes/archive/2026-02-21-diff-between-rounds/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-distinct-comment-indicator-color/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-edit-existing-comment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-fix-status-bar-and-gutter-dot/: design.md  proposal.md  tasks.md
openspec/changes/cli-version-display/: tasks.md
openspec/changes/customizable-keybindings/: design.md  proposal.md  tasks.md
openspec/specs/cli-version/: spec.md
openspec/specs/comment-editing/: spec.md
openspec/specs/inline-comments/: spec.md
openspec/specs/review-operations/: spec.md
openspec/specs/round-diff/: spec.md
openspec/specs/self-update/: spec.md
openspec/specs/test-suite/: spec.md
src/mdreview/: __init__.py  __main__.py  app.py  cli.py  diff.py  keybindings.py  markdown.py  mermaid.py  models.py  operations.py  storage.py
src/mdreview/widgets/: comment_input.py  comment_picker.py  comment_popover.py  confirm.py  file_selector.py  help_overlay.py
tests/: conftest.py  test_cli.py  test_diff.py  test_keybindings.py  test_mermaid.py  test_models.py  test_operations.py  test_storage.py
(+48 files in other folders)
